# TK499-gcc

./: .gitignore  CMakeLists.txt  arm-none-eabi-gcc.cmake
CMSIS_and_startup/: TK499.ld  TKM32F499_FLASH.ld  startup_Tk499.c  startup_tkm32f499.s  sys.c  sys.h  tk499.h
CMSIS_and_startup/CMSIS/: cmsis_gcc.h
Hal_lib/inc/: HAL_conf.h
Hal_lib/src/: HAL_gpio.c  HAL_i2c.c
project/: GPIO_LED.uvguix.tiky1  GPIO_LED.uvoptx  GPIO_LED.uvprojx  JLinkSettings.ini  lv_conf.h
project/bsp/: main.c
project/bsp/LCD/: ASCII.h  LCD.c  LCD.h
project/bsp/TK499_I2C/: TK499_I2C.c
project/bsp/Timer/: timer.c  timer.h
project/bsp/UART/: UART.c  UART.h  ring_buffer.c  ring_buffer.h
project/bsp/srs_programmer/: srs_programmer.c  srs_programmer.h
project/bsp/touch/: touch_CTP.c  touch_CTP.h
project/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
project/lvgl/src/misc/: lv_color.h  lv_log.h
project/ui/: ui.c  ui.h  ui_code.c  ui_code.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_indicator_ver_png.c  ui_img_pot_hor_knob_png.c  ui_img_pot_hor_line_tempo_png.c
